Nav bar height changed to fix z-indexing issue

--- a/ProductivityTracker/src/sass/pages/activities-input.scss
+++ b/ProductivityTracker/src/sass/pages/activities-input.scss
@@ -129,8 +129,7 @@
     margin-right: 2.5rem;
     margin-bottom: 2.5rem;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
     font-family: 'Josefin Sans', sans-serif;
     font-size: clamp(1.2rem, 1.3rem, 2.5rem);
     text-align: center;
@@ -158,7 +157,8 @@
       border-radius: 1rem;
       padding: .8rem 1.2rem;
       box-shadow: 1px 2px rgba(0, 0, 0, .3);
-
+      
+      z-index: 99;
       margin: auto;
       transition-property: background-color, translateX, color, box-shadow;
       transition-duration: 0.5s;
