--- a/ProductivityTracker/src/sass/pages/nav-bar.scss
+++ b/ProductivityTracker/src/sass/pages/nav-bar.scss
@@ -13,7 +13,6 @@
 
   #nav-grid {
     
-
     #logo {
       font-family: 'Indie Flower', cursive;
       font-size: clamp(1.5rem, 2rem, 3rem);
@@ -66,9 +65,7 @@
   #nav-grid {
     position: absolute;
     margin: 0;
-    z-index: 3;
-
-    
+    z-index: 2;
     #logo {
       visibility: collapse;
     }
@@ -77,7 +74,6 @@
       padding: 1rem 0;
       text-align: center;
       font-family: 'Indie Flower', cursive;
-      z-index: 3;
 
     }
 
@@ -160,9 +156,9 @@
   background-color: rgba(3, 49, 46, .9);
   color: white;
   max-width: 10rem;
-  min-height: 95vh;
-  z-index: 3;
-  border-top-right-radius: 1rem;
+  
+
+  border-radius: 1rem;
 }
 
 .hamburger-menu:has(input:checked) + .sidebar {
@@ -170,7 +166,7 @@
 }
 
 .hamburger-menu:has(input:checked) + .sidebar ~ #nav-grid {
-  z-index: 4;
+  
 }
 
 }
